[package]
name = "stamp-aux"
version = "0.1.0"
authors = ["Andrew Danger Lyon <andrew@killtheradio.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
blake2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "3.0"
regex = "1.4"
resolve = "0.2"
rusqlite = { version = "0.24", features = ["bundled"] }
serde = "1.0"
serde_derive = "1.0"
stamp-core = { path = "../core" }
thiserror = "1.0"
toml = "0.5"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tower-http = { version = "0.4", features = ["trace"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = "2.0"
url = "2.2"
